docs(srs): add SRS document in Markdown format
Added Markdown version of Phase 2 SRS for easy editing and version control...

--- a/docs/CSAI203_SRS_Team18_202301043.md
+++ b/docs/CSAI203_SRS_Team18_202301043.md
@@ -14,6 +14,7 @@
 ***Team Members:***  
 ***Amr Yasser 202301043***  
 ***Omar Hazem Ahmed 202300800***  
+***Omar Darish 202301146***  
 ***Abdelrahman Mohamed 202301645***  
 ***Hady Emad Saeed 202301707***  
 **Representative ID: *202301043***  
